# mail-agent

./: .env.example  .gitignore  chat.py  check_mail.py  pyproject.toml  test.ipynb
mail_agent/: __init__.py  agent.py  cleaner.py  client.py  config.py  contacts.py  model.py  sender.py  tools.py
server/: main.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/assistant-ui/: assistant-modal.tsx  interrupt-approval.tsx  thread.tsx
