[project]
name = "mail-agent"
version = "0.1.0"
description = "IMAP-клиент для получения писем: Gmail локально, внутренний контур в проде"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "langchain-openrouter>=0.2.3",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mail_agent"]
